# hybrid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-single-platform.yml
assets/man/: man.mtl
examples/: CMakeLists.txt
examples/example/: CMakeLists.txt  example.cpp
examples/fractal_flythrough/: CMakeLists.txt  fractal_flythrough.cpp  model_controller.cpp  model_controller.hpp
examples/fractal_travel/: CMakeLists.txt  fractal_travel.cpp
include/hybrid/: application.hpp  camera.hpp  camera_controller.hpp  hybrid.hpp  hybrid_render_pipeline.hpp  hybrid_shared.hpp  perspective_camera.hpp  renderer.hpp  timer.hpp
include/hybrid/config/: path.hpp.in
include/hybrid/core/: application.hpp  game_object.hpp  time.hpp  timer.hpp
include/hybrid/renderer/: camera.hpp  camera_controller.hpp  game_object.hpp  hybrid_render_pipeline.hpp  model_controller.hpp  perspective_camera.hpp  vertex.hpp
shaders/: CMakeLists.txt
shaders/glsl/: blinn_phong.frag  blinn_pong.frag  full_screen_triangle.vert  game_object.frag  game_object.vert  geometry.frag  geometry.vert  lighting.frag  mipmap_4x4_filter.comp  mipmap_cross_bilateral_filter.comp  pbr.frag  present.frag  ray_march.frag  ray_march_test.frag  shadow.comp  skybox.frag  specular_reflections.comp  triangle.frag  triangle.vert
shaders/glsl/core/: core.glsl  custom_sdf.glsl  math.glsl  pbr.glsl  ray.glsl  ray_march_test.glsl  sdf.glsl  test.glsl
src/: application.cpp  camera.cpp  camera_controller.cpp  hybrid.cpp  hybrid_render_pipeline.cpp  perspective_camera.cpp  renderer.cpp  time.cpp  timer.cpp
src/core/: application.cpp  game_object.cpp  time.cpp  timer.cpp
src/renderer/: camera.cpp  camera_controller.cpp  game_object.cpp  hybrid_render_pipeline.cpp  model_controller.cpp  perspective_camera.cpp  vertex.cpp
